syntax = "proto3";

option csharp_namespace = "AdminService";

service GrpcSignIn {
    rpc AddSignIn(SignInCreateRequest) returns (SignInCreateResponse) {}
    rpc UpdateSignIn(SignInUpdateRequest) returns (SignInUpdateResponse) {}
}

message SignInCreateRequest{ // SignInCreateRequest doesn't need data
}

message SignInCreateResponse{
    bool status = 1;
}

message SignInUpdateRequest{
    string id = 1;
    int32 time = 2;
}

message SignInUpdateResponse{
    bool status = 1;
}